--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
     <title>APOLLONIAN</title>
 </head>
-<body class="p-0 m-0 box-border">
+<body style="padding: 0; margin: 0; box-sizing: border-box;"  class="overflow-x-hidden">
+
     <!-- header section -->
-     <header class="fixed top-0 left-0 right-0 py-5 px-4 md:px-0 ">
+     <header class="fixed top-0 left-0 right-0 py-5 px-4 md:px-0 bg-white">
         <nav class="header container mx-auto  hidden lg:flex justify-between items-center">
             <!-- menu  -->
             <div class="flex justify-between">
@@ -46,7 +47,7 @@
              <div>
                 <h1 class="text-2xl tracking-widest font-cormorant font-bold">APOLLONIAN</h1>
             </div>
-            <div class=" relative group flex justify-between pb-16">
+            <div class=" relative group flex justify-between ">
             <!-- icons -->
              <div class="hidden sm:flex mr-7 mt-1.5 ">
                 <span class="text-[#000000ab] font-karla text-xl mr-5"><i class="fa-regular fa-heart"></i></span>
@@ -55,9 +56,10 @@
              </div>
         
             <!-- Button -->
-             <div class="text-3xl flex items-center justify-center cursor-pointer transition duration-300 shadow-lg shadow-black-400/50 group-hover:rotate-90 group-hover:scale-110 text-[#000000ab]">☰</div>
+             <input type="checkbox" id="menu-toggle" class="peer hidden">
+             <label for="menu-toggle" class="text-3xl flex items-center justify-center cursor-pointer transition duration-300 peer-checked:rotate-90 peer-checked:scale-110 text-[#000000ab]">☰</label>
              <!-- Menu -->
-              <ul class="font-karla absolute top-14 left-1/2 -translate-x-1/2  pointer-events-none transition-all duration-300 opacity-0 group-hover:opacity-100 group-hover:pointer-events-auto">
+              <ul class="font-karla absolute top-14 left-1/2 -translate-x-2/3  pointer-events-none transition-all duration-300 opacity-0 peer-checked:opacity-100 peer-checked:pointer-events-auto">
                 <li class="my-2 transform -translate-y-3 transition duration-300 group-hover:translate-y-0"><a href="#" class="block w-36 py-2 text-center rounded-full bg-[#000000ab] text-white transition">HOME</a></li>
                 <li class="my-2 transform -translate-y-3 transition duration-300 group-hover:translate-y-0  delay-75"><a href="#"class="block w-36 py-2 text-center rounded-full bg-[#000000ab] text-white transition">JEWELRY</a></li>
                 <li class="my-2 transform -translate-y-3 transition duration-150 group-hover:translate-y-0  delay-75"><a href="#"class="block w-36 py-2 text-center rounded-full bg-[#000000ab] text-white transition">NEW RELEASES</a></li>
@@ -67,14 +69,85 @@
              </div>
         </nav>
      </header>
+
      <!-- banner section  -->
-      <section class="mt-20 bg-[url(./images/banner.png)] bg-cover bg-center flex justify-center items-center min-h-screen w-full">
+      <section class="mt-20 bg-[url(./images/banner.png)] bg-cover bg-center flex items-center justify-center  min-h-screen mx-0">
         <div class="container mx-auto text-left px-4 md:px-0 text-white space-y-8">
         <h2 class="text-6xl font-cormorant">The Autumn Equinox</h2>
         <p class="font-karla ">Fall has arrived. <br> Shop for our new releases starting today.</p>
         <button class="font-karla border px-3 py-2 text-[#beb6b6]">SHOP NOW</button>
-        
         </div>
-      </section>
+    </section>
+
+    <!-- shop category section  -->
+     <section>
+        <div class=" container mx-auto my-10">
+            <!-- top -->
+        <div class="text-center space-y-1">
+            <h2 class="text-2xl font-cormorant font-semibold">Shop by category</h2>
+            <p class="font-cormorant"><em>Indulge in what we offer.</em></p>
+        </div>
+        <!-- card -->
+         <div class="grid grid-cols-5 gap-2 mt-5 text-center px-4 md:px-0">
+            <div>
+                <img src="./images/Necklaces.png" alt="" class="w-full">
+                <h3 class="font-cormorant">Necklaces</h3>
+            </div>
+            <div>
+                <img src="./images/Earrings.png" alt="">
+                <h3 class="font-cormorant">Earrings</h3>
+            </div>
+            <div>
+                <img src="./images/Bracelets.png" alt="">
+                <h3 class="font-cormorant">Bracelets</h3>
+            </div>
+            <div>
+                <img src="./images/Rings.png" alt="">
+                <h3 class="font-cormorant">Rings</h3>
+            </div>
+            <div>
+                <img src="./images/Charms.png" alt="">
+                <h3 class="font-cormorant">Charms</h3>
+            </div>
+         </div>
+        </div>
+     </section>
+
+     <!-- ARTICLE Section for medium device -->
+     <section class="bg-[#0F0D0D] hidden md:block">
+        <div class="flex justify-between gap-10 ">
+            <div class="article-left md:w-1/3">
+                <img src="./images/article.png" class="w-full md:h-[70vh]">
+            </div>
+            <div class="article-right text-white w-2/3">
+                <p class="font-karla mt-5 text-sm">ARTICLE  •  OCTOBER  2022</p>
+                <h2 class="font-cormorant text-2xl mt-14 mb-6">During the golden hour.</h2>
+                <p class="font-karla text-sm w-4/5 mb-11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus vulputate eu scelerisque felis imperdiet proin fermentum. Cras semper auctor neque vitae tempus quam pellentesque. Elementum sagittis vitae et leo duis. <br> Elementum sagittis vitae et leo duis. Libero nunc consequat interdum varius. Habitant morbi tristique senectus et netus et malesuada fames ac</p>
+                <a href="" class="font-karla border px-3 py-2">READ MORE</a>
+            </div>
+        </div>
+      </section> 
+       <!-- ARTICLE Section for mobile device -->
+        <section class="bg-[url(./images/article.png)] bg-no-repeat bg-cover bg-center md:hidden my-7">
+            <div class="article-right text-white p-12 bg-[#0f0d0da9]">
+                <p class="font-karla mt-5 text-sm">ARTICLE  •  OCTOBER  2022</p>
+                <h2 class="font-cormorant text-2xl mt-14 mb-6">During the golden hour.</h2>
+                <p class="font-karla text-sm  mb-11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus vulputate eu scelerisque felis imperdiet proin fermentum. Cras semper auctor neque vitae tempus quam pellentesque. Elementum sagittis vitae et leo duis. <br> Elementum sagittis vitae et leo duis. Libero nunc consequat interdum varius. Habitant morbi tristique senectus et netus et malesuada fames ac</p>
+                <a href="" class="font-karla border px-3 py-2">READ MORE</a>
+            </div>
+        </section>
+        <!-- gift section  -->
+         <section class="my-8  mx-auto">
+        <div class="flex flex-col-reverse  md:flex-row justify-between gap-10 h-auto md:h-[70vh] items-center bg-[#F4F0EB]">
+            <div class="article-right text-black md:w-2/3 pl-7 md:pl-5 justify-center pb-7 md:pb-0">
+                <h2 class="font-cormorant text-2xl  mb-6 font-bold">During the golden hour.</h2>
+                <p class="font-karla text-sm w-4/5 mb-11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus vulputate eu scelerisque felis imperdiet proin fermentum. Cras semper auctor neque vitae tempus quam pellentesque. Elementum sagittis vitae et leo duis. <br> Elementum sagittis vitae et leo duis. Libero nunc consequat interdum varius. Habitant morbi tristique senectus et netus et malesuada fames ac</p>
+                <a href="" class="font-karla border px-3 py-2 ">READ MORE</a>
+            </div>
+             <div class="article-left md:w-1/3 p-7 md:p-0">
+                <img src="./images/gift.png" class="w-full md:h-[70vh] object-cover">
+            </div>
+        </div>
+      </section> 
 </body>
 </html>
