added necklecs section

--- a/new-releases.html
+++ b/new-releases.html
@@ -71,14 +71,66 @@
         </nav>
      </header>
 
-    <section>
-        <div>
+    <section class=" mt-20 bg-[url(./images/new-release/banner.png)] bg-no-repeat bg-cover bg-center">
+        <div class="text-white text-center container mx-auto py-20 px-6 md:px-0 space-y-4">
             
+            <h2 class="font-karla text-[#c4c2c2] font-semibold">FALL RELEASE</h2>
+            <h1 class="font-cormorant font-bold text-5xl">the autumn equinox</h1>
+            <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <br class="hidden md:block"> quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
     </section>
+    
+    <!-- necklaces -->
+     <section>
+        <div class="container mx-auto  py-20 px-6 md:px-0 space-y-4">
+        <!-- top -->
+         <div class="flex sm:flex-row flex-col gap-4 justify-between items-center">
+            <div class="flex sm:flex-row flex-col gap-4 justify-between items-center">
+            <h2 class="font-cormorant text-2xl mr-2 font-bold">Necklaces</h2>
+            <p class="font-karla text-sm text-[#666666]">With new beginnings come more pendants.</p>
+            </div>
+            <a href="">
+                <button class="font-karla text-[#666666] border border-[#666666] py-2 px-3">SHOP ALL NECKLACES</button>
+            </a>
+         </div>
+         <!-- card -->
+          <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-3">
+            <div>
+                <img src="./images/new-release/neck1.png" alt="">
+                <p class="font-karla">HEART DROP</p>
+                <p class="font-karla text-[#666666]">$100.00</p>
+            </div>
+            <div>
+                <img src="./images/new-release/nec2.png" alt="">
+                <p class="font-karla">DIAMOND CHOKER</p>
+                <p class="font-karla text-[#666666]">$200.00</p>
+            </div>
+            <div>
+                <img src="./images/new-release/nce3.png" alt="">
+                <p class="font-karla">LEAF PENDANT</p>
+                <p class="font-karla text-[#666666]">$180.00</p>
+            </div>
+            <div>
+                <img src="./images/new-release/nce4.png" alt="">
+                <p class="font-karla">RUBY PENDANT</p>
+                <p class="font-karla text-[#666666]">$120.00</p>
+            </div>
+            <div>
+                <img src="./images/new-release/nec5.png" alt="">
+                <p class="font-karla">INTERLOCKING GOLD</p>
+                <p class="font-karla text-[#666666]">$210.00</p>
+            </div>
+            <div>
+                <img src="./images/new-release/nec6.png" alt="">
+                <p class="font-karla">INITIAL PENDANT</p>
+                <p class="font-karla text-[#666666]">$100.00</p>
+            </div>
+          </div>
+         </div>
+     </section>
 
      <!-- footer -->
-     <footer class=" bg-[#F4F0EB] py-4">
+     <footer class=" bg-[#F4F0EB] py-4 ">
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 container mx-auto p-6 gap-5 lg:gap-0 text-center sm:text-left">
             <div class="space-y-2">
                 <h2 class="font-cormorant font-bold text-lg">CUSTOMER SERVICES</h2>
