added necklecs section change font

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class="article-right text-white w-2/3">
                 <p class="font-karla mt-5 text-sm">ARTICLE  •  OCTOBER  2022</p>
-                <h2 class="font-cormorant text-2xl mt-14 mb-6">During the golden hour.</h2>
+                <h2 class="font-cormorant text-2xl mt-14 mb-6 font-bold">During the golden hour.</h2>
                 <p class="font-karla text-sm w-4/5 mb-11">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus vulputate eu scelerisque felis imperdiet proin fermentum. Cras semper auctor neque vitae tempus quam pellentesque. Elementum sagittis vitae et leo duis. <br> Elementum sagittis vitae et leo duis. Libero nunc consequat interdum varius. Habitant morbi tristique senectus et netus et malesuada fames ac</p>
                 <a href="" class="font-karla border px-3 py-2">READ MORE</a>
             </div>
