fixed the image prblm

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
         <!-- card -->
          <div class="grid grid-cols-5 gap-2 mt-5 text-center px-4 md:px-0">
             <div>
-                <img src="./images/Necklaces.png" alt="" class="w-full">
+                <div  class="overflow-hidden">
+                <img src="./images/Necklaces.png" alt="" class=" object-cover">
+                </div>
                 <h3 class="font-cormorant">Necklaces</h3>
             </div>
             <div>
@@ -211,7 +213,7 @@
                 <h2 class="font-cormorant font-bold text-xl">You can be one step ahead.</h2>
                 <p  class="font-cormorant font-semibold text-base text-[#1d1d1d]">Sign up to hear about our updates on the dot.</p>
                 <!-- input  -->
-                <div class="flex justify-center items-center bg-white p-2 rounded-md w-72 mx-auto">
+                <div class="flex justify-center items-center bg-white p-2 rounded-md w-72 mx-auto sm:mx-0">
                 <input type="email" name="" id="" placeholder="Your email address"  class="flex-1 bg-transparent outline-none px-2 text-sm text-white placeholder-gray-500 ">
                 <button  class="bg-white px-4 py-1 text-xs font-semibold text-gray-600 rounded hover:bg-gray-300">SIGN UP</button>
                 </div>
