--- a/gift.html
+++ b/gift.html
@@ -9,6 +9,8 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- css -->
      <link rel="stylesheet" href="./tailwind.css">
+     <!-- favicon -->
+      <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 
     <title>APOLLONIAN</title>
 </head>
