added new ear rings

--- a/new-releases.html
+++ b/new-releases.html
@@ -88,7 +88,7 @@
         <!-- top -->
          <div class="flex sm:flex-row flex-col gap-4 justify-between items-center">
             <div class="flex sm:flex-row flex-col gap-4 justify-between items-center">
-            <h2 class="font-cormorant text-2xl mr-2 font-bold">Necklaces</h2>
+            <h2 class="font-cormorant text-3xl mr-2 font-bold">Necklaces</h2>
             <p class="font-karla text-sm text-[#666666]">With new beginnings come more pendants.</p>
             </div>
             <a href="">
@@ -125,6 +125,55 @@
             <div>
                 <img src="./images/new-release/nec6.png" alt="">
                 <p class="font-karla">INITIAL PENDANT</p>
+                <p class="font-karla text-[#666666]">$100.00</p>
+            </div>
+          </div>
+         </div>
+     </section>
+
+    <!-- earrings -->
+     <section>
+        <div class="container mx-auto  py-20 px-6 md:px-0 space-y-4">
+        <!-- top -->
+         <div class="flex sm:flex-row flex-col gap-4 justify-between items-center">
+            <div class="flex sm:flex-row flex-col gap-4 justify-between items-center">
+            <h2 class="font-cormorant text-3xl mr-2 font-bold">Earrings</h2>
+            <p class="font-karla text-sm text-[#666666]">Adorn your ears with the new atmosphere.</p>
+            </div>
+            <a href="">
+                <button class="font-karla text-[#666666] border border-[#666666] py-2 px-3">SHOP ALL NECKLACES</button>
+            </a>
+         </div>
+         <!-- card -->
+          <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-3">
+            <div>
+                <img src="./images/new-release/ear1.png" alt="">
+                <p class="font-karla">MINI HOOPS</p>
+                <p class="font-karla text-[#666666]">$200.00</p>
+            </div>
+            <div>
+                <img src="./images/new-release/ear2.png" alt="">
+                <p class="font-karla">DANGLING LEAVES</p>
+                <p class="font-karla text-[#666666]">$90.00</p>
+            </div>
+            <div>
+                <img src="./images/new-release/ear3.png" alt="">
+                <p class="font-karla">LEAF STUDS</p>
+                <p class="font-karla text-[#666666]">$80.00</p>
+            </div>
+            <div>
+                <img src="./images/new-release/ear4.png" alt="">
+                <p class="font-karla">CHAIN DROPS</p>
+                <p class="font-karla text-[#666666]">$40.00</p>
+            </div>
+            <div>
+                <img src="./images/new-release/ear5.png" alt="">
+                <p class="font-karla">DIAMOND STUDS</p>
+                <p class="font-karla text-[#666666]">$210.00</p>
+            </div>
+            <div>
+                <img src="./images/new-release/ear6.png" alt="">
+                <p class="font-karla">SPHERICAL DROPS</p>
                 <p class="font-karla text-[#666666]">$100.00</p>
             </div>
           </div>
