--- a/new-releases.html
+++ b/new-releases.html
@@ -23,7 +23,7 @@
             <div class="flex justify-between">
             <span class="text-[#000000ab] mr-5"><i class="fa-solid fa-location-dot"></i></span>
             <a href="./index.html" class="text-[#000000ab] mr-5 font-karla text-xl">HOME</a>
-            <a href="#" class="text-[#000000ab] mr-5 font-karla text-xl">JEWELRY</a>
+            <a href="./jewelry.html" class="text-[#000000ab] mr-5 font-karla text-xl">JEWELRY</a>
             <a href="#" class="text-[#000000ab] mr-5 font-karla text-xl">NEW RELEASES</a>
             <a href="./gift.html" class="text-[#000000ab] font-karla text-xl">GIFTS</a>
             </div>
@@ -64,7 +64,7 @@
              <!-- Menu -->
               <ul class="font-karla absolute top-14 left-1/2 -translate-x-2/3  pointer-events-none transition-all duration-300 opacity-0 peer-checked:opacity-100 peer-checked:pointer-events-auto">
                 <li class="my-2 transform -translate-y-3 transition duration-300 group-hover:translate-y-0"><a href="./index.html" class="block w-36 py-2 text-center rounded-full bg-[#000000ab] text-white transition">HOME</a></li>
-                <li class="my-2 transform -translate-y-3 transition duration-300 group-hover:translate-y-0  delay-75"><a href="#"class="block w-36 py-2 text-center rounded-full bg-[#000000ab] text-white transition">JEWELRY</a></li>
+                <li class="my-2 transform -translate-y-3 transition duration-300 group-hover:translate-y-0  delay-75"><a href="./jewelry.html"class="block w-36 py-2 text-center rounded-full bg-[#000000ab] text-white transition">JEWELRY</a></li>
                 <li class="my-2 transform -translate-y-3 transition duration-150 group-hover:translate-y-0  delay-75"><a href="#"class="block w-36 py-2 text-center rounded-full bg-[#000000ab] text-white transition">NEW RELEASES</a></li>
                 <li class="my-2 transform -translate-y-3 transition duration-300 group-hover:translate-y-0  delay-200"><a href="./gift.html"class="block w-36 py-2 text-center rounded-full bg-[#000000ab] text-white transition">GIFTS</a></li>
               </ul>
