--- a/jewelry.html
+++ b/jewelry.html
@@ -17,7 +17,7 @@
 <body style="padding: 0; margin: 0; box-sizing: border-box;"  class="overflow-x-hidden">
 
     <!-- header section -->
-     <header class="fixed top-0 left-0 right-0 py-5 px-4 md:px-0 bg-white">
+     <header class="fixed top-0 left-0 right-0 py-5 px-4 md:px-0 bg-white z-50">
         <nav class="header container mx-auto  hidden lg:flex justify-between items-center">
             <!-- menu  -->
             <div class="flex justify-between">
