linked with jewelry

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
         <div class="container mx-auto text-left px-4 md:px-0 text-white space-y-8">
         <h2 class="text-6xl font-cormorant">The Autumn Equinox</h2>
         <p class="font-karla ">Fall has arrived. <br> Shop for our new releases starting today.</p>
+        <a href="./jewelry.html">
         <button class="font-karla border px-3 py-2 text-[#beb6b6]">SHOP NOW</button>
+        </a>
         </div>
     </section>
 
@@ -92,28 +94,38 @@
         </div>
         <!-- card -->
          <div class="grid grid-cols-5 gap-2 mt-5 text-center px-4 md:px-0">
+            <a href="./jewelry.html#necklaces">
             <div>
                 <div  class="overflow-hidden">
                 <img src="./images/Necklaces.png" alt="" class=" object-cover">
                 </div>
                 <h3 class="font-cormorant">Necklaces</h3>
             </div>
+            </a>
+            <a href="./jewelry.html#earrings">
             <div>
                 <img src="./images/Earrings.png" alt="">
                 <h3 class="font-cormorant">Earrings</h3>
             </div>
+            </a>
+            <a href="./jewelry.html#bracelets">
             <div>
                 <img src="./images/Bracelets.png" alt="">
                 <h3 class="font-cormorant">Bracelets</h3>
             </div>
+            </a>
+            <a href="./jewelry.html#rings">
             <div>
                 <img src="./images/Rings.png" alt="">
                 <h3 class="font-cormorant">Rings</h3>
             </div>
+            </a>
+            <a href="./jewelry.html#charms">
             <div>
                 <img src="./images/Charms.png" alt="">
                 <h3 class="font-cormorant">Charms</h3>
             </div>
+            </a>
          </div>
         </div>
      </section>
