--- a/jewelry.html
+++ b/jewelry.html
@@ -75,14 +75,15 @@
 
      <!-- top -->
       <section class="mt-20 relative bg-white">
-        <div class="fixed top-14 left-0 right-0  pb-10 pt-16 bg-white">
-            <ul class="flex justify-between items-center px-12 md:px-28 lg:px-40 container mx-auto font-karla ">
-                <li class="text-[#515151]">SORT BY:</li>
-                <li class="border-b border-b-transparent hover:border-b hover:border-neutral-950"><a href="#necklaces">Necklaces</a></li>
-                <li class="border-b border-b-transparent hover:border-b hover:border-neutral-950"><a href="#earrings">Earrings</a></li>
-                <li class="border-b border-b-transparent hover:border-b hover:border-neutral-950"><a href="#bracelets">Bracelets</a></li>
-                <li class="border-b border-b-transparent hover:border-b hover:border-neutral-950"><a href="#rings">Rings</a></li>
-                <li class="border-b border-b-transparent hover:border-b hover:border-neutral-950"><a href="#charms">Charms</a></li>
+        <div class="fixed top-14 left-0 right-0 pt-16 bg-white">
+            
+            <ul class="flex justify-between items-center px-5 sm:px-12 md:px-28 lg:px-40 container mx-auto pb-10 font-karla">
+                <li class="text-[#515151] text-sm sm:text-base hidden sm:block">SORT BY:</li>
+                <li class="border-b border-b-transparent hover:border-b hover:border-neutral-950 text-sm sm:text-base"><a href="#necklaces">Necklaces</a></li>
+                <li class="border-b border-b-transparent hover:border-b hover:border-neutral-950 text-sm sm:text-base"><a href="#earrings">Earrings</a></li>
+                <li class="border-b border-b-transparent hover:border-b hover:border-neutral-950 text-sm sm:text-base"><a href="#bracelets">Bracelets</a></li>
+                <li class="border-b border-b-transparent hover:border-b hover:border-neutral-950 text-sm sm:text-base"><a href="#rings">Rings</a></li>
+                <li class="border-b border-b-transparent hover:border-b hover:border-neutral-950 text-sm sm:text-base"><a href="#charms">Charms</a></li>
             </ul>
         </div>
       </section>
